basic/19-persistent-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoh-pod-pv
spec:
  selector:
    matchLabels:
      app: contoh-pod-pv
  template:
    metadata:
      labels:
        app: contoh-pod-pv
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: contoh-persistent-claim
      containers:
        - name: contoh-pod-pv
          image: herdanis/simple-service:1.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: data
              mountPath: /app/data
