basic/11-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoh-service
spec:
  selector:
    app: rs-service
  ports:
    - port: 80
      targetPort: 8089
