basic/12-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: contoh-service.default.svc.cluster.local
  ports:
    - port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: contoh-service
spec:
  selector:
    app: rs-service
  ports:
    - port: 80
      targetPort: 8089
