basic/13-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoh-nodeport
spec:
  type: NodePort
  selector:
    app: rs-service
  ports:
    - port: 80
      targetPort: 8089
      nodePort: 30000
